# ever-cli

./: .npmignore  .snyk  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
.github/: actionlint.yaml
.github/workflows/: build-native-binaries.yml  codeql.yml  publish-npm-packages.yml
docs/: IMPLEMENTATION_SPEC.md  SPEC.md
npm/: postinstall.js
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64-gnu/: package.json
npm/cli-linux-x64-gnu/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-win32-arm64-msvc/: package.json
npm/cli-win32-x64-msvc/: package.json
scripts/: check-npm-publish-prereqs.js  prepare-platform-package.js  sync-package-versions.js
src/: catalog.rs  clear.d.ts  cli.rs  config.rs  error.rs  exec.rs  fs.rs  main.rs  main.ts  manifest.rs  npm.rs  resolver.rs
src/commands/: config.rs  doctor.rs  help.rs  install.rs  list.rs  mod.rs  uninstall.rs  update.rs  version.rs
